Implement Gmail synchronization enhancements with async processing and incremental sync tracking